Catch case of module not in dependency tree